# phone-gate-bridge

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: deploy-phone-gate.sh  validate-env.sh
deploy/cloudflared/: phone-gate.yml
deploy/config/: allowed-callers.toml.example
deploy/systemd/: cloudflared-phone-gate.service  phone-gate-webhook.service
src/gate_bridge/: __init__.py  cli.py  client.py  webhook.py  webhook_cli.py
tests/: test_client.py  test_webhook.py
