[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-gate-bridge"
version = "0.1.0"
description = "UniFi Access gate unlock bridge"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Oren" }
]

[project.scripts]
gate-open = "gate_bridge.cli:main"
gate-webhook = "gate_bridge.webhook_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
